# Algorithm-Engineering

./: .gitattributes  .gitignore  README.md
Datasaurus_Cpp/: CMakeLists.txt  config.h  main.cpp  shapes.h  statistics.cpp  statistics.h  tests.cpp
Datasaurus_Cpp/Notebook/: ExportGifs.ipynb  Plots.ipynb  Results.ipynb  circle.csv
Datasaurus_Cpp/data/: database.csv  dino_dense.csv  line.csv  output.csv  output_circle.csv  output_circle_best.csv  output_line_best.csv  output_sierpinski_best.csv  output_sierpinski_dense_best.csv  output_star.csv  output_star_best.csv  sierpinski_dense.csv
Datasaurus_Cpp/frames/circle/: frame_0000000000.csv  frame_0000100000.csv  frame_0000200000.csv  frame_0000300000.csv  frame_0000400000.csv  frame_0000500000.csv  frame_0000600000.csv  frame_0000700000.csv  frame_0000800000.csv  frame_0000900000.csv  frame_0001000000.csv  frame_0001100000.csv  frame_0001200000.csv  frame_0001300000.csv  frame_0001400000.csv  frame_0001500000.csv  frame_0001600000.csv  frame_0001700000.csv  frame_0001800000.csv  frame_0001900000.csv  frame_0002000000.csv  frame_0002100000.csv  frame_0002200000.csv  frame_0002300000.csv  frame_0002400000.csv  frame_0002500000.csv  frame_0002600000.csv  frame_0002700000.csv  frame_0002800000.csv  frame_0002900000.csv  frame_0003000000.csv  frame_0003100000.csv  frame_0003200000.csv  frame_0003300000.csv  frame_0003400000.csv  frame_0003500000.csv  frame_0003600000.csv  frame_0003700000.csv  frame_0003800000.csv  frame_0003900000.csv  (+241 more)
Datasaurus_Cpp/frames/line/: frame_0000000000.csv  frame_0000100000.csv  frame_0000200000.csv  frame_0000300000.csv  frame_0000400000.csv  frame_0000500000.csv  frame_0000600000.csv  frame_0000700000.csv  frame_0000800000.csv  frame_0000900000.csv  frame_0001000000.csv  frame_0001100000.csv  frame_0001200000.csv  frame_0001300000.csv  frame_0001400000.csv  frame_0001500000.csv  frame_0001600000.csv  frame_0001700000.csv  frame_0001800000.csv  frame_0001900000.csv  frame_0002000000.csv  frame_0002100000.csv  frame_0002200000.csv  frame_0002300000.csv  frame_0002400000.csv  frame_0002500000.csv  frame_0002600000.csv  frame_0002700000.csv  frame_0002800000.csv  frame_0002900000.csv  frame_0003000000.csv  frame_0003100000.csv  frame_0003200000.csv  frame_0003300000.csv  frame_0003400000.csv  frame_0003500000.csv  frame_0003600000.csv  frame_0003700000.csv  frame_0003800000.csv  frame_0003900000.csv  (+241 more)
Datasaurus_Cpp/frames/sierpinski/: frame_0000000000.csv  frame_0000100000.csv  frame_0000200000.csv  frame_0000300000.csv  frame_0000400000.csv  frame_0000500000.csv  frame_0000600000.csv  frame_0000700000.csv  frame_0000800000.csv  frame_0000900000.csv  frame_0001000000.csv  frame_0001100000.csv  frame_0001200000.csv  frame_0001300000.csv  frame_0001400000.csv  frame_0001500000.csv  frame_0001600000.csv  frame_0001700000.csv  frame_0001800000.csv  frame_0001900000.csv  frame_0002000000.csv  frame_0002100000.csv  frame_0002200000.csv  frame_0002300000.csv  frame_0002400000.csv  frame_0002500000.csv  frame_0002600000.csv  frame_0002700000.csv  frame_0002800000.csv  frame_0002900000.csv  frame_0003000000.csv  frame_0003100000.csv  frame_0003200000.csv  frame_0003300000.csv  frame_0003400000.csv  frame_0003500000.csv  frame_0003600000.csv  frame_0003700000.csv  frame_0003800000.csv  frame_0003900000.csv  (+241 more)
Datasaurus_Cpp/frames/sierpinski_dense/: frame_0000000000.csv  frame_0000100000.csv  frame_0000200000.csv  frame_0000300000.csv  frame_0000400000.csv  frame_0000500000.csv  frame_0000600000.csv  frame_0000700000.csv  frame_0000800000.csv  frame_0000900000.csv  frame_0001000000.csv  frame_0001100000.csv  frame_0001200000.csv  frame_0001300000.csv  frame_0001400000.csv  frame_0001500000.csv  frame_0001600000.csv  frame_0001700000.csv  frame_0001800000.csv  frame_0001900000.csv  frame_0002000000.csv  frame_0002100000.csv  frame_0002200000.csv  frame_0002300000.csv  frame_0002400000.csv  frame_0002500000.csv  frame_0002600000.csv  frame_0002700000.csv  frame_0002800000.csv  frame_0002900000.csv  frame_0003000000.csv  frame_0003100000.csv  frame_0003200000.csv  frame_0003300000.csv  frame_0003400000.csv  frame_0003500000.csv  frame_0003600000.csv  frame_0003700000.csv  frame_0003800000.csv  frame_0003900000.csv  (+241 more)
Datasaurus_Cpp/frames/star/: frame_0000100000.csv  frame_0000200000.csv  frame_0000300000.csv  frame_0000400000.csv  frame_0000500000.csv  frame_0000600000.csv  frame_0000700000.csv  frame_0000800000.csv  frame_0000900000.csv  frame_0001000000.csv  frame_0001100000.csv  frame_0001200000.csv  frame_0001300000.csv  frame_0001400000.csv  frame_0001500000.csv  frame_0001600000.csv  frame_0001700000.csv  frame_0001800000.csv  frame_0001900000.csv  frame_0002000000.csv  frame_0002100000.csv  frame_0002200000.csv  frame_0002300000.csv  frame_0002400000.csv  frame_0002500000.csv  frame_0002600000.csv  frame_0002700000.csv  frame_0002800000.csv  frame_0002900000.csv  frame_0003000000.csv  frame_0003100000.csv  frame_0003200000.csv  frame_0003300000.csv  frame_0003400000.csv  frame_0003500000.csv  frame_0003600000.csv  frame_0003700000.csv  frame_0003800000.csv  frame_0003900000.csv  frame_0004000000.csv  (+240 more)
answers/01_Course_Intro_and_OpenMP/: 01_slide_research.md  CMakeLists.txt  pi_monte_carlo.cpp
answers/01_Course_Intro_and_OpenMP/03_warmup/: warmup.cpp
answers/01_Course_Intro_and_OpenMP/Chapter 1 discussion/: Chapter_1_discussion.md
answers/05_CMake_and_Optimization_Process/01_quantpng/: CMakeLists.txt  Makefile
answers/05_CMake_and_Optimization_Process/01_quantpng/lodepng/: CMakeLists.txt
answers/05_CMake_and_Optimization_Process/01_quantpng/quantize/: CMakeLists.txt
answers/05_CMake_and_Optimization_Process/02_fizzbuzz/: CMakeLists.txt  catch_main.cpp  catch_tests_fizzbuzz.cpp
answers/05_CMake_and_Optimization_Process/02_fizzbuzz/catch/: CMakeLists.txt
answers/05_CMake_and_Optimization_Process/02_fizzbuzz/fizzbuzz/: CMakeLists.txt
paper/: Ideas.md
project/: CMakeLists.txt  config.h  main.cpp  statistics.cpp  tests.cpp
project/Notebook/: Results.ipynb
project/data/: sierpinski.csv  star.csv
(+56 files in other folders)
